<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


<!-- Seekbar-->

    <SeekBar
        android:id="@+id/channel1PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/channel1positionvalue"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/channel1positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <SeekBar
        android:id="@+id/channel2PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel1PositionBar"
        android:layout_alignRight="@+id/channel1PositionBar"
        android:layout_alignTop="@+id/channel2positionlabel"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel2positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel2positionlabel"
        android:layout_alignBottom="@+id/channel2positionlabel"
        android:layout_alignLeft="@+id/channel1positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel2positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/channel1positionlabel"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="5dp"
        android:text="@string/channel2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/servolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/servo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonpololurecordid"
        android:layout_alignEnd="@+id/buttonpololurecordid" />

    <TextView
        android:id="@+id/positionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/homeButtonid"
        android:layout_alignStart="@+id/homeButtonid" />

    <TextView
        android:id="@+id/channel3positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel1positionlabel"
        android:layout_below="@+id/channel1positionlabel"
        android:layout_marginTop="52dp"
        android:text="@string/channel3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel3positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel3positionlabel"
        android:layout_alignBottom="@+id/channel3positionlabel"
        android:layout_alignLeft="@+id/channel1positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel3PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel2PositionBar"
        android:layout_alignRight="@+id/channel2PositionBar"
        android:layout_alignTop="@+id/channel3positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel4positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel2positionlabel"
        android:layout_below="@+id/channel2PositionBar"
        android:layout_marginTop="48dp"
        android:text="@string/channel4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel4positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel4positionlabel"
        android:layout_alignBottom="@+id/channel4positionlabel"
        android:layout_alignLeft="@+id/channel2positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel4PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel3PositionBar"
        android:layout_alignRight="@+id/channel3PositionBar"
        android:layout_alignTop="@+id/channel4positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel5positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel3positionlabel"
        android:layout_below="@+id/channel3PositionBar"
        android:layout_marginTop="47dp"
        android:text="@string/channel5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel5positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel5positionlabel"
        android:layout_alignBottom="@+id/channel5positionlabel"
        android:layout_alignLeft="@+id/channel3positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel6positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel5positionlabel"
        android:layout_below="@+id/channel5PositionBar"
        android:layout_marginTop="7dp"
        android:text="@string/channel6"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel5PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel4PositionBar"
        android:layout_alignTop="@+id/channel5positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel6positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel6positionlabel"
        android:layout_alignBottom="@+id/channel6positionlabel"
        android:layout_alignLeft="@+id/channel5positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel6PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel5PositionBar"
        android:layout_alignRight="@+id/channel5PositionBar"
        android:layout_alignTop="@+id/channel6positionlabel"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel7positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel5positionlabel"
        android:layout_below="@+id/channel5PositionBar"
        android:layout_marginTop="48dp"
        android:text="@string/channel7"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel7PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel6PositionBar"
        android:layout_alignRight="@+id/channel6PositionBar"
        android:layout_alignTop="@+id/channel7positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel8positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel6positionlabel"
        android:layout_below="@+id/channel6PositionBar"
        android:layout_marginTop="49dp"
        android:text="@string/channel8"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel8PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel7PositionBar"
        android:layout_alignRight="@+id/channel7PositionBar"
        android:layout_alignTop="@+id/channel8positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <SeekBar
        android:id="@+id/channel9PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel8PositionBar"
        android:layout_alignRight="@+id/channel8PositionBar"
        android:layout_alignTop="@+id/channel9positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel9positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel8positionlabel"
        android:layout_below="@+id/channel8PositionBar"
        android:layout_marginTop="8dp"
        android:text="@string/channel9"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel10positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel8positionlabel"
        android:layout_below="@+id/channel8PositionBar"
        android:layout_marginTop="48dp"
        android:text="@string/channel10"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel10positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel10positionlabel"
        android:layout_alignBottom="@+id/channel10positionlabel"
        android:layout_alignLeft="@+id/channel8positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel10PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel6PositionBar"
        android:layout_alignTop="@+id/channel10positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel1positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel2positionlabel"
        android:layout_below="@+id/servolabel"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/channel1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel11positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel9positionlabel"
        android:layout_below="@+id/channel9PositionBar"
        android:layout_marginTop="48dp"
        android:text="@string/channel11"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel11PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel10PositionBar"
        android:layout_alignRight="@+id/channel10PositionBar"
        android:layout_alignTop="@+id/channel11positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <TextView
        android:id="@+id/channel12positionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/channel10PositionBar"
        android:layout_marginTop="48dp"
        android:layout_toLeftOf="@+id/channel11positionvalue"
        android:text="@string/channel12"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel12positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel12positionlabel"
        android:layout_alignBottom="@+id/channel12positionlabel"
        android:layout_toRightOf="@+id/channel11positionlabel"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/channel12PositionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel11PositionBar"
        android:layout_alignTop="@+id/channel12positionvalue"
        android:gravity="left"
        android:max="1200"
        android:progress="600" />

    <Button
        android:id="@+id/buttonpololurecordid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/channel11positionlabel"
        android:layout_below="@+id/channel12PositionBar"
        android:text="@string/buttonpololurecordstring" />

    <TextView
        android:id="@+id/channel11positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel11positionlabel"
        android:layout_alignBottom="@+id/channel11positionlabel"
        android:layout_alignLeft="@+id/channel12positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel9positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel9positionlabel"
        android:layout_alignBottom="@+id/channel9positionlabel"
        android:layout_alignLeft="@+id/channel10positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel8positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel8positionlabel"
        android:layout_alignBottom="@+id/channel8positionlabel"
        android:layout_alignLeft="@+id/channel7positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel7positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/channel7positionlabel"
        android:layout_alignBottom="@+id/channel7positionlabel"
        android:layout_alignLeft="@+id/channel6positionvalue"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/channel1positionvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/channel2positionlabel"
        android:layout_alignLeft="@+id/channel11positionvalue"
        android:gravity="right"
        android:text="@string/channelPositionResetValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/runGaitButtonid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonpololurecordid"
        android:layout_alignBottom="@+id/buttonpololurecordid"
        android:layout_marginLeft="67dp"
        android:layout_toRightOf="@+id/positionLabel"
        android:text="@string/runGaitButtonString" />

    <Button
        android:id="@+id/homeButtonid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/channel12PositionBar"
        android:layout_below="@+id/channel12PositionBar"
        android:layout_marginRight="50dp"
        android:text="@string/moveAllChannelsToHomePosition" />

    <Button
        android:id="@+id/clearGaitButtonid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearGaitButtonString"
        android:layout_below="@+id/channel12PositionBar"
        android:layout_toLeftOf="@+id/homeButtonid"
        android:layout_toStartOf="@+id/homeButtonid" />

</RelativeLayout>